--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
             ],
             "scripts": [
               "node_modules/chart.js/dist/chart.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/html2canvas/dist/html2canvas.min.js",
+              "node_modules/jspdf/dist/jspdf.umd.min.js",
+              "node_modules/dom-to-image/dist/dom-to-image.min.js"
             ]
           },
           "configurations": {
