--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "~11.1.2",
     "@swimlane/ngx-charts": "^18.0.1",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "chart.js": "^3.4.1",
+    "dom-to-image": "^2.6.0",
+    "html2canvas": "^1.1.4",
+    "jspdf": "^2.3.1",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
